--- a/MyApp/Views/Message/ViewMessages.cshtml
+++ b/MyApp/Views/Message/ViewMessages.cshtml
@@ -35,7 +35,7 @@
 							<label class="small fw-bold" for="check-@message.MessageId">Läst</label>
 						</div>
 					</div>
-					<p style e="font-weight: @fontWeight; color: @textColor;">
+					<p style="font-weight: @fontWeight; color: @textColor;">
 						@message.SentAt.ToString("yyyy-MM-dd HH:mm")
 					</p>
 				</div>
