--- a/MyApp/Views/Project/Edit.cshtml
+++ b/MyApp/Views/Project/Edit.cshtml
@@ -1,6 +1,8 @@
 ﻿@model MyApp.Models.Project
 
-<h2>Edit Project</h2>
+<h2>Redigera projekt</h2>
+<p class="text-muted">Du redigerar ett projekt som du har skapat.</p>
+
 
 <form asp-action="Edit" method="post">
     <input type="hidden" asp-for="ProjectId" />
@@ -10,7 +12,7 @@
         <input asp-for="Title" class="form-control" />
     </div>
 
-    <div class="form-group">
+    /*<div class="form-group">
         <label>Description</label>
         <textarea asp-for="Description" class="form-control" rows="3"></textarea>
     </div>
@@ -25,10 +27,10 @@
         <input asp-for="ZipFile" class="form-control" />
     </div>
 
-    <div class="form-group">
+    @*<div class="form-group">
         <label>Creator (Owner)</label>
         <select asp-for="CreatorId" class="form-control" asp-items="ViewBag.Creators"></select>
-    </div>
+    </div>*@
 
     <br />
     <button type="submit" class="btn btn-primary">Save Changes</button>
