--- a/MyApp/Views/Project/Add.cshtml
+++ b/MyApp/Views/Project/Add.cshtml
@@ -1,68 +1,70 @@
 ﻿@model MyApp.Models.Project
 
-<div class="Title" style="text-align: center; margin-top: 50px;">
-    <h3>Skapa ett projekt</h3>
+@{
+    ViewData["Title"] = "Skapa-projekt";
+}
+
+<div class="container mt-5" style="max-width: 800px;">
+    <h2 class ="text-center mb-5"> Skapa ett projekt</h2>
+    
+    @if (ViewBag.SuccessMessage != null)
+    {
+        <div class="row mb-3">
+            <div class="col-12">
+                <div class="alert alert-success alert-dismissible show text-center border-0" role="alert "style="border-radius: 6px; padding: 10px;">
+                    @ViewBag.SuccessMessage
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" style="position: absolute; top: 50%; transform: translateY(-50%); right: 10px;  font-size: 0.8rem; padding: 0.5rem;"></button>
+                </div>
+            </div> 
+        </div>
+    }
+
+    <!-- Fyller i info om projektet -->
+    <form asp-action="Add" method="post">
+
+        <div class="row mb-3 align-items-center">
+            <label class="col-md-3 col-form-label">Titel*</label>
+            <div class="col-md-9">
+                <input asp-for="Title" class="form-control border-0" style="background-color: #dcdcdc; height: 45px;" />
+                <span asp-validation-for="Title" class="text-danger small"></span>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-start">
+            <label class="col-md-3 col-form-label">Beskrivning*</label>
+            <div class="col-md-9">
+                <textarea asp-for="Description" class="form-control border-0" style="background-color: #dcdcdc;" rows="4"></textarea>
+                <span asp-validation-for="Description" class="text-danger small"></span>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label class="col-md-3 col-form-label">Programmeringsspråk*</label>
+            <div class="col-md-9">
+                <input asp-for="CodeLanguage" class="form-control border-0" style="background-color: #dcdcdc; height: 45px;" />
+                <span asp-validation-for="CodeLanguage" class="text-danger small"></span>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label class="col-md-3 col-form-label">Startdatum*</label>
+            <div class="col-md-9">
+                <input asp-for="StartDate" type="date" class="form-control border-0" style="background-color: #dcdcdc; height: 45px;" />
+                <span asp-validation-for="StartDate" class="text-danger small"></span>
+            </div>
+        </div>
+
+        <div class="row mb-3 align-items-center">
+            <label class="col-md-3 col-form-label">Skapad av:</label>
+            <div class="col-md-9">
+                <input typeof="text" value="@User.Identity.Name" class="form-control border-0" style="background-color: #dcdcdc; height: 45px;" readonly />
+            </div>
+        </div>
+
+        <div class="row mt-5">
+            <div class="col-12 text-center">
+                <button type="submit" class="btn px-5 py-2" style="background-color: #c0c0c0; border: none; font-size: 1.1rem;">Spara projekt</button>
+            </div>
+        </div>
+    </form>
 </div>
-
-@if (ViewBag.SuccessMessage != null)
-{
-    <div style="margin: 20px auto; width: 500px; padding: 10px; background-color: #d4edda; color: #155724; text-align: center;">
-        @ViewBag.SuccessMessage
-    </div>
-}
-
-<!-- Fyller i info om projektet -->
-<form asp-action="Add" method="post" enctype="multipart/form-data">
-    <div style="width: 100%; margin: 0 18%;">
-        <div class="create-project project-title" style="margin-top: 25px;">
-            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Titel</label>
-            <input asp-for="Title" style="width: 500px; background-color: #D9D9D9; border: none;" required />
-        </div>
-
-        <div class="create-project project-description" style="margin-top: 25px;">
-            <label style="display: inline-block; width: 150px; text-align: right; vertical-align: top; margin-right: 20px;">Beskrivning</label>
-            <textarea asp-for="Description" style="width: 500px; background-color: #D9D9D9; border: none;" rows="4" required></textarea>
-        </div>
-
-        <div class="create-project project-programming-language" style="margin-top: 25px;">
-            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Programmeringsspråk</label>
-            <input asp-for="CodeLanguage" style="width: 500px; background-color: #D9D9D9; border: none;" required />
-        </div>
-
-        <div class="create-project project-start-date" style="margin-top: 25px;">
-            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Startdatum</label>
-            <input asp-for="StartDate" type="date" style="width: 500px; background-color: #D9D9D9; border: none;" required />
-        </div> 
-
-        <div class="create-project project-creator" style="margin-top: 25px;">
-            <label style="display: inline-block; width: 150px; text-align: right; margin-right: 20px;">Skapad av</label>
-            <input type="text" value="@User.Identity.Name" style="width: 500px; background-color: #D9D9D9; border: none;" readonly />
-        </div>
-        
-        <div class="create-project project-zip" style="margin-top: 25px; display: inline-block;">
-            <label style="width: 150px; text-align: right; margin-right: 20px;">Ladda upp ZIP-fil</label>
-            <input type="file" name="fileToUpload" accept=".zip" style="text-align: right;">
-        </div>
-
-        <div class="create-project project-save-button" style="margin-top: 25px; text-align: center; margin-right: 98px;">
-            <button type="submit" style="display: inline-block; width: 150px; height: 50px; background-color: #C6C4C4; border: none;">Spara projekt</button>
-        </div>
-    </div>  
-</form>
-
-@* Skapa i CSS:
-.create-project{    
-    margin-top: 25px;
-}
-
-.create-project label{
-    display: inline-block; 
-    width: 150px; 
-    text-align: right; 
-    margin-right: 20px;
-}
-
-.create-project input{
-    width: 500px;
-    background-color: #D9D9D9;
-} *@
